--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>贪吃蛇游戏</title>
-    <link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>贪吃蛇游戏</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="game-container">
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
-        <button id="restartButton" style="display:none;">重新开始</button>
-        <div id="score-container">
-            分数: <span id="score">0</span>
-        </div>
-    </div>
-    <script src="snake.js"></script>
+<canvas id="gameCanvas" width="300" height="400"></canvas>
+<div id="controls">
+  <button id="up">上</button>
+  <button id="down">下</button>
+  <button id="left">左</button>
+  <button id="right">右</button>
+</div>
+<script src="snake.js"></script>
 </body>
 </html>
+
