--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <button id="left">左</button>
   <button id="right">右</button>
 </div>
+<button id="restartButton" style="display: none;">重新开始</button>
 <script src="snake.js"></script>
 </body>
 </html>
