--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <canvas id="gameCanvas" width="300" height="400"></canvas>
 <div id="controls">
-  <button id="up">上</button>
-  <button id="down">下</button>
-  <button id="left">左</button>
-  <button id="right">右</button>
+  <button id="up"></button>
+  <button id="down"></button>
+  <button id="left"></button>
+  <button id="right"></button>
 </div>
 <button id="restartButton" style="display: none;">重新开始</button>
 <script src="snake.js"></script>
