--- a/index.html
+++ b/index.html
@@ -245,6 +245,15 @@
                 <h3>📝 Selected Publications</h3>
 
                 <div class="publication-item">
+                    <span class="pub-title">LoPA: Scaling dLLM Inference via Lookahead Parallel Decoding</span>
+                    <span class="pub-authors"><strong>C Xu</strong>, Y Jin, J Li, Y Tu, G Long, D Tu, M Song, H Si, T Hou, J Yan, Z Deng</span>
+                    <span class="pub-meta">
+                        arXiv preprint arXiv:2512.16229 | 
+                        <a href="https://arxiv.org/abs/2512.16229" class="pub-link" target="_blank">Paper Link</a>
+                    </span>
+                </div>
+
+                <div class="publication-item">
                     <span class="pub-title">Diffusion LLMs Can Do Faster-Than-AR Inference via Discrete Diffusion Forcing</span>
                     <span class="pub-authors">X Wang, <strong>C Xu</strong>, Y Jin, J Jin, H Zhang, Z Deng</span>
                     <span class="pub-meta">
@@ -273,9 +282,8 @@
                 </div>
             </section>
 
-            <section id="hobbies">
-                <h3>⚡ Fun Facts & Hobbies</h3>
-                <p>Outside of research, I cultivate a balance between discipline and creativity:</p>
+            <section id="achievements">
+                <h3>🏆 Achievements & Activities</h3>
                 <ul>
                     <li>
                         <strong>🥋 Martial Arts:</strong>
@@ -287,8 +295,7 @@
                     <li>
                         <strong>🎹 Music:</strong>
                         <ul style="margin-top: 5px;">
-                            <li>Pianist & Composer.</li>
-                            <li>Former band member with extensive live performance experience during university.</li>
+                            <li>Keyboardist, <strong>Unicorne Rabbit Band</strong>, Shanghai Jiao Tong University (上海交通大学独角兔子乐队键盘手).</li>
                         </ul>
                     </li>
                 </ul>
